Unused imports cleaned up. Now to test 2 controllers